# code-audit

./: .env.example  .gitignore  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: code-audit.yml
benchmarks/: run.py
benchmarks/samples/crypto_and_secrets/: ground_truth.json  utils.py
benchmarks/samples/perf_and_arch/: api.py  ground_truth.json
benchmarks/samples/sql_injection_app/: app.py  ground_truth.json
benchmarks/samples/xss_and_auth/: ground_truth.json  server.js
dashboard/: api.py  index.html
plugin/.claude-plugin/: plugin.json
plugin/skills/code-audit/: SKILL.md
skill/: SKILL.md
src/code_audit/: __init__.py  __main__.py  cli.py
src/code_audit/agents/: __init__.py  architectural.py  base.py  combined.py  functional.py  judge.py  maintainability.py  performance.py  reflector.py  security.py
src/code_audit/config/: __init__.py  defaults.py  loader.py  models.py
src/code_audit/context/: __init__.py  codebase.py  diff.py  file_reader.py  review_md.py
src/code_audit/engine/: __init__.py  fixer.py  orchestrator.py  state.py
src/code_audit/github/: __init__.py  client.py  comments.py  (+1 more)
tests/: conftest.py
tests/unit/: test_agent_response.py  test_config.py  test_dependency_scanner.py  test_diff_parsing.py  test_memory.py  test_pipeline_mock.py  test_reflection.py  test_sarif.py  test_secrets_scanner.py  test_usage.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  findings-provider.ts  history-provider.ts  runner.ts  sarif-parser.ts
website/: api.py  index.html  try.html
(+39 files in other folders)
