[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-audit"
version = "0.1.0"
description = "Multi-agent AI code review tool with parallel specialist agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # CLI & Terminal
    "typer>=0.15.0",
    "rich>=14.0.0",

    # Data models & validation
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # LLM Providers
    "anthropic>=0.50.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",

    # SARIF output
    "sarif-pydantic>=0.6.0",

    # Code graph / dependency analysis
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
code-audit = "code_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_audit"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
